--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -1,4 +1,4 @@
-<ngx-loading [show]="loading"></ngx-loading>
+<ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>
 <div class="container">
   <!-- <div class="row justify-content-end" *ngIf="numCuentas && rolUser"> -->
     <div class="row justify-content-end">  
