--- a/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
+++ b/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
@@ -1,4 +1,4 @@
-<ngx-loading [show]="loading"></ngx-loading>
+<ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>
 <div mat-dialog-title>
   <div class="row justify-content-between">
     <div class="col">
