--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -2,7 +2,7 @@
 <ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>      
 <div class="row justify-content-end">  
   <div class="col-lg-12 text-right btn-crear">
-    <button (click)="openDialog()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Pre Alerta</button>    
+    <button (click)="openDialog()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Prealerta</button>    
   </div>          
 </div>
 
