--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -97,8 +97,9 @@
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                   <div class="col align-self-center mt-5">
-                    <img src="/assets/img/brand/logo.png" alt="AACESA">
-                    <h2>Bienvenido</h2>
+                    <img src="/assets/img/brand/logo.png" width="200px" height="auto" alt="AACESA">
+                    <br>
+                    <h4>Bienvenido</h4>
                   </div>
               </div>
             </div>
