--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -24,8 +24,8 @@
       <form [formGroup]="firstFormGroup">                
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">                
+              <div class="row justify-content-center">
+                <div class="col-sm-5 col-md-5 col-lg-5">                
                   <mat-form-field class="input-full-width">         
                     <input matInput type="text" formControlName="masterCtrl" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/> 
                     <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
@@ -36,9 +36,9 @@
                     </mat-error>    
                   </mat-form-field>                                                
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-12">                                                
+                <div class="col-sm-5 col-md-5 col-lg-5">                                                
                   <mat-form-field class="input-full-width">    
-                    <input matInput type="text" formControlName="houseCtrl" placeholder="Guía House"/>                    
+                    <input matInput type="text" formControlName="houseCtrl" maxlength="20" placeholder="Guía House"/>                    
                   </mat-form-field>                 
                 </div>
               </div>          
@@ -77,6 +77,7 @@
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
+                  <span matSuffix>Kg.</span>
                   <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
                       Este campo es obligatorio
                   </mat-error> 
@@ -146,7 +147,7 @@
               (filesChange) = "dropInputChange($event)"
               class="my-drop-zone"
             >
-            <div class="my-drop-zone__text d-none d-lg-block d-xl-block">Arrastra / Selecciona tus archivos</div>
+            <div class="my-drop-zone__text d-none d-lg-block d-xl-block">Arrastra / Selecciona tus archivos .PDF (Max. 4Mb por archivo)</div>
             <div class="my-drop-zone__icon"><i class="fas fa-cloud-upload-alt"></i></div>            
             </div>                                    
           </div>  
