Cambios en dashboard
Cambios en dashboard

--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -73,8 +73,8 @@
               <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element">
-                      <a class="btn" (click)="getPDFInvoices(element)"><i class="fas fa-file-pdf"></i></a>
-                      <a class="btn" (click)="getXMLInvoices(element)"><i class="far fa-file-code"></i></a> 
+                      <a class="btn" (click)="getPDFInvoices(element)"><i class="fas fa-file-pdf u-cursor"></i></a>
+                      <a class="btn" (click)="getXMLInvoices(element)"><i class="far fa-file-code u-cursor"></i></a> 
                   </td>
                 </ng-container>
 
