--- a/src/app/aaacesa/general-summary/general-summary.component.scss
+++ b/src/app/aaacesa/general-summary/general-summary.component.scss
@@ -1,3 +1,20 @@
+.bg-gray{
+  background-color: gray;
+}
+
+.bg-salidas{
+  background-color: #1EC8F3;
+}
+
+.bg-transfer{
+  background-color: #1E82BA;
+}
+
+.bg-abandono{
+  background-color: #D9E11E;
+}
+
+
 .bg-red {
   background-color: #CF0A2B !important;
 }
