--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -6,7 +6,6 @@
         <button mat-button style="color:#CF0A2B">Mes</button>
     </div>
       <br>
-      <br>
   <div class="row"> 
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
       
@@ -15,12 +14,29 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
-      <div class="row" style="margin-bottom:20px;">
+      <div class="row" style="margin-bottom:20px; margin-right: 0">
+        <mat-card class="noticias">
+        <mat-card-header><mat-card-subtitle>Noticias</mat-card-subtitle></mat-card-header>
+        <img class="img-fluid" style="height:240px; width:400px" routerlink="http://www.aaacesa.com.mx/Aaacesa/Noticias" src="http://www.aaacesa.com.mx/Content/images/new-noticia-CadenaFrio.jpg" />
+        <mat-card-content><br><p>AAACESA, a la vanguardia en infraestructura en cade de frio.</p></mat-card-content>
+        </mat-card>
+       <!--  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+          <p>Noticias</p>
+          <img class="img-fluid" style="height:220px, width:400px" src="http://www.aaacesa.com.mx/Content/images/new-noticia-CadenaFrio.jpg" />
+          <p><b>AAACESA, a la vanguardia en infraestructura en cade de frio.</b></p>
+        </div> -->
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-          <img class="img-fluid" src="https://via.placeholder.com/400x220" />
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-          <img class="img-fluid" src="https://via.placeholder.com/400x220" />
+          <!-- <img class="img-fluid" src="https://via.placeholder.com/400x220" /> -->
+          <mat-card class="img">
+            <div class="row">
+              <div class="first-img col-lg-12">
+              <img class="img-fluid" style="height:340px; width:400px" routerlink="http://www.aaacesa.com.mx/Aaacesa/Noticias" src="http://www.aaacesa.com.mx/Content/images/montacargas-rfdi.jpg" />
+            </div>
+            <!-- <div class="second-img col-lg-8">
+              <img class="img-fluid" style="height:140px; width:370px; border: 1px" src="https://upload.wikimedia.org/wikipedia/commons/e/ec/AICM_logo.jpg" alt="">
+            </div> -->
+            </div>  
+            </mat-card>
         </div>
       </div>
       <div class="row">
@@ -78,7 +94,7 @@
 
               </div>
               <div class="col-xs-12" style="color:aqua; margin-bottom:14px"><mat-divider></mat-divider></div>
-              <div class="col-xs-12 text-center"><a href="#" style="color:#6976D2">Ver todo</a></div>
+              <div class="col-xs-12 text-center"><a href="./mercancias" style="color:#6976D2">Ver todo</a></div>
             </div>
           </div>
         </div>
